fix: overflow and drawer-button

--- a/src/main/css/mycellar.css
+++ b/src/main/css/mycellar.css
@@ -12,7 +12,7 @@ body {
   color: rgba(0, 0, 0, 0.87);
 }
 
-body core-drawer-panel[rightDrawer] {
+body core-drawer-panel[rightDrawer] [main] {
   overflow-y: auto;
 }
 
